# breaking-the-cycle

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  README.md  build_optil.io.sh  checks.sh  create_kernels.sh  run_exact.sh
exp/: README.md
exp/bench-par-vs-seq/: README.md  eval.py  job.sh  run.sh
src/: algorithm.rs  binary_queue.rs  bitset.rs  graph.rs  io.rs  lib.rs  log.rs  main.rs  network_flow.rs  pre_processor.rs  pre_processor_reduction.rs  reduction_rule.rs  signal_handling.rs
src/bench/: fvs_bench.rs  mod.rs
src/bench/io/: bench_writer.rs  design_point_buffer.rs  fvs_writer.rs  keyed_buffer.rs  keyed_csv_writer.rs  keyed_writer.rs  mod.rs
src/exact/: branch_and_bound.rs  branch_and_bound_on_graphs.rs  exhaustive_search.rs  mod.rs
src/exact/branch_and_bound/: bb_core.rs  bb_graph.rs  bb_stats.rs  cuts.rs  frame.rs  generic_int_graph.rs  graph4.rs  graph8.rs  mod.rs  result_cache.rs  scc_iterator.rs  solution.rs
src/exact/branch_and_bound/frame/: branch_on_clique.rs  branch_on_node.rs  branch_on_node_group.rs  branch_on_sccs.rs  cuts.rs  kernelization.rs  mod.rs
src/exact/branch_and_bound_matrix/: avx2.rs  bb_core.rs  bb_graph.rs  bb_stats.rs  generic_int_graph.rs  mod.rs  scc_iterator.rs
src/graph/: adj_array.rs  adj_array_undir.rs  adj_list_matrix.rs  complete_subgraphs.rs  connectivity.rs  digest.rs  generators.rs  graph_macros.rs  hash_graph.rs  io.rs  matching.rs  matrix.rs  mod.rs  network_flow.rs  node_mapper.rs  partition.rs  subgraph.rs  traversal.rs  unique_node_stack.rs
src/heuristics/: artificial_bee_colony.rs  greedy.rs  lowerbound_circuits.rs  mod.rs  weakest_link.rs
src/heuristics/local_search/: mod.rs  naive_topo_strategy.rs  rand_topo_strategy.rs  sim_anneal.rs  topo_config.rs
src/heuristics/local_search/topo/: candidate_topo_strategy.rs  macros.rs  mod.rs  naive_topo_strategy.rs  rand_topo_strategy.rs  set_topo_config.rs  topo_config.rs  topo_local_search.rs  vec_topo_config.rs
src/heuristics/utils/: macros.rs  mod.rs  node_index_set.rs  set_vec.rs
src/kernelization/: crown.rs  flow_based.rs  mod.rs  redundant_cycles.rs  single_staged.rs  two_staged.rs
src/random_models/: gnp.rs  mod.rs  planted_cycles.rs
src/utils/: bit_manip.rs  int_iterator.rs  int_subsets.rs  mod.rs
src/utils/bitintr/: license.md  mod.rs  pdep.rs  pext.rs
