[package]
name = "dfvs"
version = "0.1.0"
authors = ["Johannes Meintrup <johannes.meintrup@mni.thm.de>"]
edition = "2018"

[dependencies]
bitvec = "0.22.3"
num = "0.4.0"
bimap = "0.6.1"
log = { version = "0.4.14", optional = true }
env_logger = { version = "0.9.0", optional = true }
rand = "0.8.4"
itertools = "0.10.1"

[features]
pace-logging=["log", "env_logger"]

[[bin]]
name = "dfvs-cli"
path = "src/main.rs"
test = false