[package]
name = "dfvs"
version = "0.1.0"
authors = ["Johannes Meintrup <johannes.meintrup@mni.thm.de>"]
edition = "2018"

[dependencies]
bitvec = "0.22.3"
num = "0.4.0"
bimap = "0.6.1"
log = { version = "0.4.14", optional = true }
env_logger = { version = "0.9.0", optional = true }
structopt = { version = "0.3", optional = true }
jemallocator = { version = "0.3.2", optional = true }
rand = "0.8.4"
rand_distr = "0.4.2"
rand_pcg = "0.3.1"
itertools = "0.10.1"
fxhash = "0.2.1"
keyed_priority_queue = "0.4.1"
glob = "0.3.0"
digest = { version = "0.10.0", optional = true }
sha2 = { version = "0.10.0", optional = true }

[features]
pace-logging=["log", "env_logger"]
pace-digest = ["digest", "sha2"]
cli = ["structopt"]

[profile.release]
debug = true

[[bin]]
name = "dfvs-cli"
path = "src/bin/dfvs-cli.rs"
required-features = ["cli"]
test = false

[[bin]]
name = "gen-gnp"
path = "src/bin/gen-gnp.rs"
required-features = ["cli"]
test = false

[[bin]]
name = "gen-planted-cycles"
path = "src/bin/gen-planted-cycles.rs"
required-features = ["cli"]
test = false

[[bin]]
name = "bench-preprocessing-reduction"
path = "src/bin/bench-preprocessing-reduction.rs"
test = false
