[package]
name = "dfvs"
version = "0.1.0"
authors = ["Johannes Meintrup <johannes.meintrup@mni.thm.de>"]
edition = "2018"

[dependencies]
bitvec = "0.22.3"
num = "0.4.0"
bimap = "0.6.1"
log = "0.4.14"
env_logger = "0.9.0"
ctrlc = { version = "3.1.9", optional = true, features = ["termination"] }
structopt = { version = "0.3", optional = true }
jemallocator = { version = "0.3.2", optional = true }
rand = "0.8.4"
rand_distr = "0.4.2"
rand_pcg = "0.3.1"
itertools = "0.10.1"
fxhash = "0.2.1"
keyed_priority_queue = "0.4.1"
glob = "0.3.0"
tempfile = { version= "3.2.0", optional = true }
test-case = { version="1.2.3", optional = true}
digest = { version = "0.10.0", optional = true }
sha2 = { version = "0.10.0", optional = true }
csv = "1.1.6"
rayon = "1.5.1"
num_cpus = "1.13.1"
bitintr = "0.3.0"
paste = "1.0.6"
arrayvec = "0.7.2"

[features]
pace-digest = ["digest", "sha2"]
cli = ["structopt"]
signal-handling = ["ctrlc"]
bb-stats = []

[profile.release]
debug = true

[[bin]]
name = "dfvs-cli"
path = "src/bin/dfvs-cli.rs"
required-features = ["cli"]
test = false

[[bin]]
name = "gen-gnp"
path = "src/bin/gen-gnp.rs"
required-features = ["cli"]
test = false

[[bin]]
name = "gen-planted-cycles"
path = "src/bin/gen-planted-cycles.rs"
required-features = ["cli"]
test = false

[[bin]]
name = "bench-preprocessing-reduction"
path = "src/bin/bench-preprocessing-reduction.rs"
test = false

[[bin]]
name = "bench-heuristics"
path = "src/bin/bench-heuristics.rs"
required-features = ["cli"]
test = false

[[bin]]
name = "bench-branch-and-bound"
path = "src/bin/bench-branch-and-bound.rs"
required-features = ["cli", "bb-stats"]
test = false

[[bin]]
name = "dfvs-preprocessing"
path = "src/bin/dfvs-preprocessing.rs"
required-features = ["cli", "pace-digest"]
test = false
